redid some logic
- added support for Kohana-Plugin-System (events quill.topic and
quill_reply are fired)
- Made default ordering optional
- if $status is null it'll load topics/replies where status != deleted
- namespaced columns in queries where needed

--- a/composer.json
+++ b/composer.json
@@ -15,5 +15,8 @@
 	"require"    :{
 		"php"                       :">5.3.2",
 		"composer/installers"       : "*"
+	},
+	"suggest": {
+		"vheissu/kohana-plugin-system": " Quill fires a few events if kohana-plugin-system is present"
 	}
 }
